# coding-dojo

./: rover.py  tests.py
diamond/: pyproject.toml
diamond/diamond/: __init__.py
diamond/tests/: test_diamond.py
fizzbuzz/: README.rst  pyproject.toml
fizzbuzz/src/fizzbuzz/: __init__.py
fizzbuzz/tests/: test_fizzbuzz.py
mars-rover/: README.rst  pyproject.toml
mars-rover/src/mars_rover/: __init__.py
mars-rover/tests/: test_mars_rover.py
simple-music-encoder/: .gitignore  README.rst  pyproject.toml
simple-music-encoder/simple_music_encoder/: __init__.py
simple-music-encoder/tests/: test_simple_music_encoder.py
